Modification server.cfg

--- a/server.cfg
+++ b/server.cfg
@@ -78,3 +78,9 @@ sv_endpointprivacy true
 
 # enable OneSync (required for server-side state awareness)
 set onesync on
+
+########################################################################################################################
+########################################################################################################################
+############################################### NitroCloud - Hébergement ###############################################
+########################################################################################################################
+########################################################################################################################
